# oke-security-scanner

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .pylintrc  AGENTS.md  CHANGELOG.md  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  pyproject.toml  renovate.json  requirements.txt  test-requirements.txt  tox.ini
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: approval.yml  cd.yml  ci.yml
k8s/: cronjob.yaml  rbac-cleanup-trigger.yaml  rbac.yaml  secret-example.yaml
src/: __init__.py  config.py  discord_notifier.py  k8s_client.py  main.py  oke_client.py  registry_client.py  scanner.py  telemetry.py  version_reporter.py
tests/: __init__.py  conftest.py  requirements.txt  test_config.py  test_discord_notifier.py  test_k8s_client.py  test_main.py  test_oke_client.py  test_registry_client.py  test_scanner.py  test_telemetry.py  test_version_reporter.py
