[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "oke-security-scanner"
version = "0.0.8"
requires-python = ">=3.11"
dependencies = [
    "kubernetes==35.0.0",
    "oci==2.168.3",
    "opentelemetry-api",
    "opentelemetry-sdk==1.40.0",
    "opentelemetry-exporter-otlp",
    "opentelemetry-instrumentation",
    "opentelemetry-instrumentation-logging",
    "requests",
    "dappertable @ git+https://github.com/tnoff/dappertable.git@v0.2.4",
]

[project.optional-dependencies]
dev = [
    "bandit",
    "pylint==4.0.5",
    "tox==4.50.3",
    "pytest==9.0.2",
    "pytest-cov==7.1.0",
    "pytest-mock==3.15.1",
    "pytest-asyncio==1.3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
