[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "oke-security-scanner"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "kubernetes==36.0.0",
    "oci==2.175.0",
    "opentelemetry-api",
    "opentelemetry-sdk==1.42.0",
    "opentelemetry-exporter-otlp",
    "opentelemetry-instrumentation",
    "opentelemetry-instrumentation-logging",
    "requests",
    "dappertable @ https://gitlab.com/tnoff-projects/dappertable/-/archive/v1.1.4/dappertable-v1.1.4.tar",
]

[project.optional-dependencies]
dev = [
    "bandit",
    "pylint==4.0.5",
    "tox==4.54.0",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "pytest-mock==3.15.1",
    "pytest-asyncio==1.3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pylint.main]
jobs = 0
persistent = true
recursive = true

[tool.pylint."messages control"]
disable = [
    "missing-module-docstring",
    "missing-function-docstring",
    "too-many-statements",
    "too-few-public-methods",
    "too-many-branches",
    "too-many-arguments",
    "too-many-locals",
    "too-many-positional-arguments",
    "too-many-instance-attributes",
    "line-too-long",
    "logging-fstring-interpolation",
    "broad-exception-caught",
    "too-many-return-statements",
    "protected-access",
    "too-many-nested-blocks",
]

[tool.pylint.format]
max-line-length = 120
indent-string = "    "

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "Run", "_", "e", "f", "db", "ns", "cfg"]

[tool.pylint.design]
max-args = 8
max-locals = 20

[tool.pylint.similarities]
min-similarity-lines = 10

[tool.pylint.imports]
allow-wildcard-with-all = false
